# purchase-agent

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
main/: views.py
main/templates/: hello.html
purchase_agent/: asgi.py  settings.py  urls.py  wsgi.py
purchase_agent/settings/: base.py  local.py  production.py
purchase_gent/: asgi.py  settings.py  urls.py  wsgi.py
