[tool.poetry]
name = "purchase-agent-website"
version = "0.1.0"
description = "purchase-agent-website"
authors = ["eagle <a034506618@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
Django = "5.1.3"
djangorestframework = "3.15.2"
django-tailwind = "3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"