[tool.poetry]
name = "purchase-agent-website"
version = "0.1.0"
description = "purchase-agent-website"
authors = ["eagle <a034506618@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0" 
Django = "5.1.3"
djangorestframework = "3.14.0"
django-tailwind = "3.8.0"
python-dotenv = "^1.0.0"
django-cors-headers = "^4.3.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"